# preservica_mass_modify

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build-portable.yml  codeql.yml  pypi-publish.yml  python-tests.yml
installer/: README.txt  install.cmd  preservica_modify.cmd  uninstall.cmd
metadata/: GDPR Template.xml
preservica_modify/: __init__.py  _init_.py  cli.py  common.py  gui.py  options.properties  options.py  pres_modify.py  pres_upload.py  upload_mode.py
preservica_modify/metadata/: EAD Template.xml
preservica_modify/options/: options.properties
tests/: test_cli_helpers.py  test_cli_run.py  test_common_and_xml.py  test_flags.py  test_ident_lookup.py  test_keyring_and_config.py  test_lookups.py  test_main_orchestration.py  test_metadata_generation.py  test_pres_modify_flows.py  test_process_descent.py  test_process_rows.py  test_update_methods.py
