[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "preservica_mass_modify"
version = "1.1.1"
authors = [
    {name="Christopher Prince", email="c.pj.prince@gmail.com"}
    ]
description = "A Tool for enabling Mass modifications of Folders and Assets on Preservica through Spreadsheets"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
keywords = ["archiving","archives","digital archiving","modifications","Preservica"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving"
    ]
dependencies=["pypreservica","pandas","openpyxl","lxml","keyring"]
[project.urls]
Homepage = "https://github.com/CPJPRINCE/preservica_mass_modify"
Issues = "https://github.com/CPJPRINCE/preservica_mass_modify/issues"
[project.scripts]
preservica_modify = "preservica_modify.cli:run_cli"

[tool.setuptools.packages.find]
where = ['.']
include = ['preservica_modify']
exclude = []

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]